Fix shadows being clipped on sides of collapsed tables.
Note: when we consolidate the Android overflow-x transform we'll want to aim to remove the '.content_block' css override in misc.less.
I'll make a note on the phab ticket for that transform consolidation.

--- a/www/less/misc.less
+++ b/www/less/misc.less
@@ -30,6 +30,8 @@ a{
     clear:both;
     overflow-x: auto;
     font-size: 16px;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 
 
